showing current amount of retweets

--- a/TwitterClient/Base.lproj/LaunchScreen.storyboard
+++ b/TwitterClient/Base.lproj/LaunchScreen.storyboard
@@ -23,9 +23,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KjU-r8-hue">
-                                <rect key="frame" x="109" y="323" width="118" height="21"/>
+                                <rect key="frame" x="128" y="323" width="118" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="118" id="wlg-Ut-8FI"/>
+                                    <constraint firstAttribute="width" constant="118" id="ASr-W0-fvk"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -34,9 +34,9 @@
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="KjU-r8-hue" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="303" id="1j3-Kl-nqi"/>
-                            <constraint firstItem="KjU-r8-hue" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="93" id="6FP-Zj-V0i"/>
-                            <constraint firstItem="KjU-r8-hue" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="R0U-1o-6Mm"/>
+                            <constraint firstItem="KjU-r8-hue" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="303" id="Bk2-kR-XFh"/>
+                            <constraint firstItem="KjU-r8-hue" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="KAg-l3-oqT"/>
+                            <constraint firstItem="KjU-r8-hue" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="112" id="RsS-zA-yN0"/>
                         </constraints>
                     </view>
                 </viewController>
