--- a/TwitterClient/Base.lproj/Main.storyboard
+++ b/TwitterClient/Base.lproj/Main.storyboard
@@ -28,12 +28,16 @@
                                 <color key="separatorColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="sectionIndexColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="sectionIndexBackgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <imageView key="tableHeaderView" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tweet_image" id="il0-Dc-fRD">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="161"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                </imageView>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="tweetCell" rowHeight="149" id="ASq-ax-S4K" customClass="TweetCell" customModule="TwitterClient" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="149"/>
+                                        <rect key="frame" x="0.0" y="189" width="375" height="149"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ASq-ax-S4K" id="R9Y-9k-IlH">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="149"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="148.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="238" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MEz-lu-ubV">
@@ -102,7 +106,19 @@
                         </constraints>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="TwitterClient" id="9Bh-Eg-VLe"/>
+                    <navigationItem key="navigationItem" title="TwitterClient" id="9Bh-Eg-VLe">
+                        <barButtonItem key="rightBarButtonItem" title="Profile" id="VJz-V9-Z2l">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="7pZ-kJ-ZRQ">
+                                <rect key="frame" x="313" y="7" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="profileViewButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0ML-zi-pVy"/>
+                                    <segue destination="TyI-y3-HSf" kind="show" identifier="profileSegue" id="YS0-3Y-lUG"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="activityIndicator" destination="lPJ-HW-7sz" id="db6-bM-ewT"/>
@@ -176,7 +192,37 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fPe-IM-ASs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-7330.3999999999996" y="-412.44377811094455"/>
+            <point key="canvasLocation" x="-7330" y="-89"/>
+        </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="O4l-6R-wLX">
+            <objects>
+                <viewController id="TyI-y3-HSf" customClass="ProfileViewController" customModule="TwitterClient" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="G4L-cZ-9NK"/>
+                        <viewControllerLayoutGuide type="bottom" id="8uX-8b-xpc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="uKJ-we-e8H">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="91j-eB-vJI">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="91j-eB-vJI" secondAttribute="trailing" id="7cb-qn-6HB"/>
+                            <constraint firstItem="91j-eB-vJI" firstAttribute="top" secondItem="G4L-cZ-9NK" secondAttribute="bottom" id="EYe-3h-hyH"/>
+                            <constraint firstItem="91j-eB-vJI" firstAttribute="leading" secondItem="uKJ-we-e8H" secondAttribute="leading" id="K2U-0T-P45"/>
+                            <constraint firstItem="8uX-8b-xpc" firstAttribute="top" secondItem="91j-eB-vJI" secondAttribute="bottom" id="uGB-WR-Qh1"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SR7-jI-Mux" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-7330" y="-745"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="oit-He-EGe">
@@ -197,4 +243,7 @@
             <point key="canvasLocation" x="-8922" y="-412"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="tweet_image" width="1824" height="1216"/>
+    </resources>
 </document>
